force-app/main/default/objects/Lead/fields/ARTL_Lead_Channel__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Lead_Channel__c</fullName>
    <label>Lead Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Organic</fullName>
            </value>
            <value>
                <fullName>Airtel Enterprise Hub</fullName>
            </value>
            <value>
                <fullName>Email Marketing</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Paid Search</fullName>
            </value>
            <value>
                <fullName>SDR Outbound</fullName>
            </value>
            <value>
                <fullName>Web - Others</fullName>
            </value>
            <value>
                <fullName>Calling</fullName>
            </value>
            <value>
                <fullName>Organic Social</fullName>
            </value>
            <value>
                <fullName>Paid Social</fullName>
            </value>
            <value>
                <fullName>LSN</fullName>
            </value>
            <value>
                <fullName>Other Campaigns</fullName>
            </value>
            <value>
                <fullName>Profiling</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Direct Traffic</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Organic Search</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>