force-app/main/default/objects/Lead/fields/ARTL_Lead_Sub_Source__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Lead_Sub_Source__c</fullName>
    <label>Lead Sub Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
            <value>
                <fullName>MAILCHIMP</fullName>
            </value>
            <value>
                <fullName>LINKEDIN</fullName>
            </value>
            <value>
                <fullName>LEADFEEDER</fullName>
            </value>
            <value>
                <fullName>CLICKSTREAM</fullName>
            </value>
            <value>
                <fullName>B2_OFFLINE</fullName>
            </value>
            <value>
                <fullName>ILMS</fullName>
            </value>
            <value>
                <fullName>B2 Potential Opportunity</fullName>
            </value>
            <value>
                <fullName>Digital Outbound</fullName>
            </value>
            <value>
                <fullName>On-Site</fullName>
            </value>
            <value>
                <fullName>Adroit</fullName>
            </value>
            <value>
                <fullName>DSR Owned</fullName>
            </value>
            <value>
                <fullName>Digital Inbound</fullName>
            </value>
            <value>
                <fullName>Agency Calling</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>