force-app/main/default/objects/Lead/fields/ARTL_Sub_Campaign__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Sub_Campaign__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sub Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>