force-app/main/default/objects/Lead/fields/ARTL_transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>ARTL_transaction_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>transaction Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>