force-app/main/default/objects/Lead/fields/Convert_Lead_Formula_Button__c.field-meta.xml
<CustomField>
    <fullName>Convert_Lead_Formula_Button__c</fullName>
    <formula>IF((ISPICKVAL(Status,&quot;Qualified&quot;) &amp;&amp; $Permission.ARTL_KAM_General_User = true), HYPERLINK(&quot;http://www.cnet.com&quot;, &quot;cnet&quot;),&quot; &quot;)</formula>
    <label>Convert Lead Formula Button</label>
    <type>Text</type>
</CustomField>