force-app/main/default/objects/Lead/fields/DSR_Nurtured_Flag__c.field-meta.xml
<CustomField>
    <fullName>DSR_Nurtured_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DSR Nurtured Flag?</label>
    <type>Checkbox</type>
</CustomField>