force-app/main/default/objects/Lead/fields/DSR_Nurturing_Remarks__c.field-meta.xml
<CustomField>
    <fullName>DSR_Nurturing_Remarks__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DSR Nurturing Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>