force-app/main/default/objects/Lead/fields/Is_Converted_To_Contact__c.field-meta.xml
<CustomField>
    <fullName>Is_Converted_To_Contact__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Converted To Contact</label>
    <type>Checkbox</type>
</CustomField>