force-app/main/default/objects/Lead/fields/Is_Task_Created__c.field-meta.xml
<CustomField>
    <fullName>Is_Task_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Task Created</label>
    <type>Checkbox</type>
</CustomField>