force-app/main/default/objects/Lead/validationRules/ARTL_LeadActionRemarksreqdForKAMUser.validationRule-meta.xml
<ValidationRule>
    <fullName>ARTL_LeadActionRemarksreqdForKAMUser</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
     NOT(ISNEW()),
     $Permission.ARTL_KAM_General_User ,
     ISBLANK(Lead_Action_Remarks__c)
)</errorConditionFormula>
    <errorDisplayField>Lead_Action_Remarks__c</errorDisplayField>
    <errorMessage>Lead Action Remarks is required.</errorMessage>
</ValidationRule>