force-app/main/default/objects/Lead/validationRules/ARTL_LeadFNValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>ARTL_LeadFNValidation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(  FirstName ,&quot;[a-zA-Z .]*&quot;))</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>First Name should not contain any Numbers/Special Characters.</errorMessage>
</ValidationRule>