force-app/main/default/objects/Lead/validationRules/ARTL_LeadLNValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>ARTL_LeadLNValidation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX( LastName ,&quot;[a-zA-Z .]*&quot;))</errorConditionFormula>
    <errorDisplayField>LastName</errorDisplayField>
    <errorMessage>Last Name should not contain any Numbers/Special Characters.</errorMessage>
</ValidationRule>