force-app/main/default/objects/Lead/validationRules/ARTL_LeadNameIsMandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>ARTL_LeadNameIsMandatory</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
   ISBLANK(FirstName),
   ISBLANK(TEXT(Salutation))
)</errorConditionFormula>
    <errorMessage>Please make sure Name(Salutation, FirstName, LastName) is required.</errorMessage>
</ValidationRule>