force-app/main/default/objects/Lead/validationRules/ARTL_LeadPhoneValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>ARTL_LeadPhoneValidation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(Phone)),
NOT(REGEX(Phone,&quot;[0-9]{6,14}$&quot;))
)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Only Numeric Values (0-9) up to 14 digits are allowed in Phone Number. Alphabets and Special characters are not allowed.</errorMessage>
</ValidationRule>