force-app/main/default/objects/Lead/validationRules/ARTL_LeadTitleValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>ARTL_LeadTitleValidation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(Title,&quot;[a-zA-Z0-9 \\-.&amp;/&apos;]*&quot;))</errorConditionFormula>
    <errorDisplayField>Title</errorDisplayField>
    <errorMessage>Title should not contain any Special Characters except ./&apos;</errorMessage>
</ValidationRule>