force-app/main/default/objects/Lead/validationRules/ARTL_RestrictLeadConversionForRelatedAcc.validationRule-meta.xml
<ValidationRule>
    <fullName>ARTL_RestrictLeadConversionForRelatedAcc</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    NOT(ISNULL(Related_Account__c)),
    IsConverted ,
    ConvertedAccountId != Related_Account__c
)</errorConditionFormula>
    <errorMessage>Lead Conversion not allowed. Please select Existing Account same as Related Account on Lead.</errorMessage>
</ValidationRule>